--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
 <area shape="rect" coords="234,1520,512,1817" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86622" target="_self" title="preguntas" alt="preguntas" />
 <area shape="rect" coords="234,840,702,1467" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86894" target="_self" title="destacado" alt="destacado" />
 <area shape="rect" coords="1321,627,1686,719" href="minimo.htm" target="_self" title="minimo" alt="minimo" />
-<area shape="rect" coords="980,627,1321,719" href="matriculas.htm" target="_self" title="matriculas" alt="matriculas" />
+<area shape="rect" coords="980,627,1321,719" href="matricula.htm" target="_self" title="matriculas" alt="matriculas" />
 <area shape="rect" coords="599,627,980,719" href="requisitos.htm" target="_self" title="requisitos" alt="requisitos" />
 <area shape="rect" coords="234,627,599,719" href="quees1.htm" target="_self" title="que es" alt="que es" />
 <area shape="rect" coords="1469,73,1710,109" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target=" " title="ya soy un pilo" alt="ya soy un pilo" />
