--- a/index.htm
+++ b/index.htm
@@ -5,25 +5,29 @@
 <head>
 <title>index</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width">
 <!--Fireworks CS6 Dreamweaver CS6 target.  Created Thu Mar 10 16:23:58 GMT-0500 (SA Pacific Standard Time) 2016-->
 </head>
 <body bgcolor="#ffffff">
-<img name="index" src="index.jpg" width="1920" height="3068" id="index" usemap="#m_index" alt="" /><map name="m_index" id="m_index">
-<area shape="rect" coords="260,2920,483,2961" href="http://aprende.colombiaaprende.edu.co/serpilopaga/88165" target="_self" title="becas" alt="becas" />
-<area shape="rect" coords="260,2874,483,2914" href="http://snies.mineducacion.gov.co/buscandocarrerav2/buscaPrograma?nivel=01" target="_self" title="buscar carrera" alt="buscar carrera" />
-<area shape="rect" coords="1405,1520,1678,1817" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86626" target="_self" title="papas" alt="papas" />
-<area shape="rect" coords="1117,1520,1389,1817" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86625" target=" " title="profes" alt="profes" />
-<area shape="rect" coords="822,1520,1098,1817" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86624" target="_self" title="charla" alt="charla" />
-<area shape="rect" coords="531,1520,807,1817" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86623" target="_self" title="dia a dia" alt="dia a dia" />
-<area shape="rect" coords="234,1520,512,1817" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86622" target="_self" title="preguntas" alt="preguntas" />
-<area shape="rect" coords="234,840,702,1467" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86894" target="_self" title="destacado" alt="destacado" />
-<area shape="rect" coords="1321,627,1686,719" href="minimo.htm" target="_self" title="minimo" alt="minimo" />
-<area shape="rect" coords="980,627,1321,719" href="matricula.htm" target="_self" title="matriculas" alt="matriculas" />
-<area shape="rect" coords="599,627,980,719" href="requisitos.htm" target="_self" title="requisitos" alt="requisitos" />
-<area shape="rect" coords="234,627,599,719" href="quees1.htm" target="_self" title="que es" alt="que es" />
-<area shape="rect" coords="1469,73,1710,109" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target=" " title="ya soy un pilo" alt="ya soy un pilo" />
-<area shape="rect" coords="1217,73,1469,109" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86641" target="_self" title="voy a ser un pilo" alt="voy a ser un pilo" />
-<area shape="rect" coords="960,73,1217,109" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86638" target="_self" title="página ser pilo paga" alt="página ser pilo paga" />
+<img name="index" src="index.jpg" width="1024" height="1636" id="index" usemap="#m_index" alt="" /><map name="m_index" id="m_index">
+
+<area shape="rect" coords="139,1557,258,1581" href="http://aprende.colombiaaprende.edu.co/serpilopaga/88165" target="_self" title="becas" alt="becas" />
+<area shape="rect" coords="139,1533,258,1556" href="http://snies.mineducacion.gov.co/buscandocarrerav2/buscaPrograma?nivel=01" target="_self" title="buscar carrera" alt="buscar carrera" />
+<area shape="rect" coords="749,811,895,969" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86626" target="_self" title="papas" alt="papas" />
+<area shape="rect" coords="596,811,741,969" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86625" target=" " title="profes" alt="profes" />
+<area shape="rect" coords="438,811,586,969" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86624" target="_self" title="charla" alt="charla" />
+<area shape="rect" coords="283,811,430,969" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86623" target="_self" title="dia a dia" alt="dia a dia" />
+<area shape="rect" coords="125,811,275,969" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86622" target="_self" title="preguntas" alt="preguntas" />
+<area shape="rect" coords="125,448,374,782" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86894" target="_self" title="destacado" alt="destacado" />
+<area shape="rect" coords="705,334,899,383" href="minimo.htm" target="_self" title="minimo" alt="minimo" />
+<area shape="rect" coords="523,334,705,383" href="matricula.htm" target="_self" title="matriculas" alt="matriculas" />
+<area shape="rect" coords="319,334,523,383" href="requisitos.htm" target="_self" title="requisitos" alt="requisitos" />
+<area shape="rect" coords="125,334,319,383" href="quees1.htm" target="_self" title="que es" alt="que es" />
+<area shape="rect" coords="783,39,912,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target=" " title="ya soy un pilo" alt="ya soy un pilo" />
+<area shape="rect" coords="649,39,783,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86641" target="_self" title="voy a ser un pilo" alt="voy a ser un pilo" />
+<area shape="rect" coords="539,39,649,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86638" target="_self" title="página ser pilo paga" alt="página ser pilo paga" />
+
+
 </map>
 </body>
 </html>
