--- a/quees1.htm
+++ b/quees1.htm
@@ -8,11 +8,11 @@
 <!--Fireworks CS6 Dreamweaver CS6 target.  Created Thu Mar 10 15:15:19 GMT-0500 (SA Pacific Standard Time) 2016-->
 </head>
 <body bgcolor="#ffffff">
-<img name="quees1" src="quees1.jpg" width="1920" height="5151" id="quees1" usemap="#m_quees1" alt="" /><map name="m_quees1" id="m_quees1">
-<area shape="rect" coords="208,32,551,176" href="index.htm" target="_self" title="home" alt="home" />
-<area shape="rect" coords="1467,73,1710,109" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target="_self" title="ya soy un pilo" alt="ya soy un pilo" />
-<area shape="rect" coords="1216,73,1467,109" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86641" target="_self" title="voy a ser un pilo" alt="voy a ser un pilo" />
-<area shape="rect" coords="960,73,1216,109" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86638" target=" _self" title="ser pilo" alt="ser pilo" />
+<img name="quees1" src="quees1.jpg" width="1024" height="2747" id="quees1" usemap="#m_quees1" alt="" /><map name="m_quees1" id="m_quees1">
+<area shape="rect" coords="783,39,912,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target=" " title="ya soy un pilo" alt="ya soy un pilo" />
+<area shape="rect" coords="649,39,783,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86641" target="_self" title="voy a ser un pilo" alt="voy a ser un pilo" />
+<area shape="rect" coords="539,39,649,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86638" target="_self" title="página ser pilo paga" alt="página ser pilo paga" />
+<area shape="rect" coords="113,17,291,94" href="index.htm" target="_self" title="home" alt="home" />
 </map>
 </body>
 </html>
