--- a/minimo.htm
+++ b/minimo.htm
@@ -8,11 +8,11 @@
 <!--Fireworks CS6 Dreamweaver CS6 target.  Created Thu Mar 10 15:29:13 GMT-0500 (SA Pacific Standard Time) 2016-->
 </head>
 <body bgcolor="#ffffff">
-<img name="minimos" src="minimos.jpg" width="1920" height="1523" id="minimos" usemap="#m_minimos" alt="" /><map name="m_minimos" id="m_minimos">
-<area shape="rect" coords="1468,74,1708,108" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target="_self" title="ya soy un pilo" alt="ya soy un pilo" />
-<area shape="rect" coords="1218,74,1468,108" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86641" target="_self" title="voy a ser un pilo" alt="voy a ser un pilo" />
-<area shape="rect" coords="960,74,1218,108" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86638" target="_self" title="ser pilo" alt="ser pilo" />
-<area shape="rect" coords="212,31,554,174" href="index.htm" target="_self" title="home" alt="home" />
+<img name="minimos" src="minimos.jpg" width="1024" height="812" id="minimos" usemap="#m_minimos" alt="" /><map name="m_minimos" id="m_minimos">
+<area shape="rect" coords="783,39,912,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target=" " title="ya soy un pilo" alt="ya soy un pilo" />
+<area shape="rect" coords="649,39,783,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86641" target="_self" title="voy a ser un pilo" alt="voy a ser un pilo" />
+<area shape="rect" coords="539,39,649,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86638" target="_self" title="página ser pilo paga" alt="página ser pilo paga" />
+<area shape="rect" coords="113,17,291,94" href="index.htm" target="_self" title="home" alt="home" />
 </map>
 </body>
 </html>
