--- a/requisitos.htm
+++ b/requisitos.htm
@@ -8,11 +8,11 @@
 <!--Fireworks CS6 Dreamweaver CS6 target.  Created Thu Mar 10 15:25:41 GMT-0500 (SA Pacific Standard Time) 2016-->
 </head>
 <body bgcolor="#ffffff">
-<img name="requisitos" src="requisitos.jpg" width="1920" height="2098" id="requisitos" usemap="#m_requisitos" alt="" /><map name="m_requisitos" id="m_requisitos">
-<area shape="rect" coords="1471,77,1712,109" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target="_self" title="ya soy un pilo" alt="ya soy un pilo" />
-<area shape="rect" coords="1218,77,1471,109" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86641" target="_self" title="voy a ser un pilo" alt="voy a ser un pilo" />
-<area shape="rect" coords="960,77,1218,109" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86638" target="_self" title="ser pilo" alt="ser pilo" />
-<area shape="rect" coords="213,32,546,175" href="index.htm" target="_self" title="home" alt="home" />
+<img name="requisitos" src="requisitos.jpg" width="1024" height="1119" id="requisitos" usemap="#m_requisitos" alt="" /><map name="m_requisitos" id="m_requisitos">
+<area shape="rect" coords="783,39,912,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target=" " title="ya soy un pilo" alt="ya soy un pilo" />
+<area shape="rect" coords="649,39,783,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86641" target="_self" title="voy a ser un pilo" alt="voy a ser un pilo" />
+<area shape="rect" coords="539,39,649,58" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86638" target="_self" title="página ser pilo paga" alt="página ser pilo paga" />
+<area shape="rect" coords="113,17,291,94" href="index.htm" target="_self" title="home" alt="home" />
 </map>
 </body>
 </html>
