--- a/correccion/index.html
+++ b/correccion/index.html
@@ -6,33 +6,48 @@
 <title>index</title>
 <script src="js/jquery.min.js"></script>
 <script>
+
 $( document ).ready(function() {
-	var ww= $(window).width();
-	var fw=ww*10/192;
-	var intfw=parseInt(fw);
-	$("html").css("transform","scale(."+intfw+")");
-	$("html").css("zoom",fw+"%");
-	$("html").css("-moz-transform","scale(0."+intfw+",0."+intfw+")");
-	$("html").css("-moz-transform-origin","left top");
-	$("html").css("-webkit-transform-origin","left top");
-	$("html").css("-webkit-transform","left top");
-	$("html").css("-ms-zoom","0."+intfw);
-	$("html").css("-webkit-zoom","0."+intfw);
-	$("html").css("transform","0."+intfw);
-});
-$( window ).resize(function() {
- 	var ww= $(window).width();
-	var fw=ww*10/192;
-	var intfw=parseInt(fw);
-	$("html").css("transform","scale(."+intfw+")");
-	$("html").css("zoom",fw+"%");
-	$("html").css("-moz-transform","scale(0."+intfw+",0."+intfw+")");
-	$("html").css("-moz-transform-origin","left top");
-	$("html").css("transform-origin","left top");
-	$("html").css("-webkit-transform-origin","left top");
-	$("html").css("-ms-zoom","0."+intfw);
-	$("html").css("-webkit-zoom","0."+intfw);
-	$("html").css("transform","0."+intfw);
+function msieversion() {
+		var ww= $(window).width();
+		var fw=ww*10/192;
+		var intfw=parseInt(fw);
+
+    var ua = window.navigator.userAgent;
+    var msie = ua.indexOf("MSIE ");
+    if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./))  // If Internet Explorer, return version number
+    {
+        //alert(parseInt(ua.substring(msie + 5, ua.indexOf(".", msie))));
+		$("html").css("transform","scale(."+intfw+")");
+    }
+    else  // If another browser, return 0
+    {
+        //alert('otherbrowser');
+    }
+    return false;
+}
+
+	function rezicePage(){
+		//console.log($.browser.msie);
+		var ww= $(window).width();
+		var fw=ww*10/192;
+		var intfw=parseInt(fw);
+		msieversion() 
+		//$("html").css("transform","scale(."+intfw+")");
+		$("html").css("transform","0."+intfw);
+		$("html").css("zoom",fw+"%");
+		$("html").css("-moz-transform","scale(0."+intfw+",0."+intfw+")");
+		$("html").css("-moz-transform-origin","left top");
+		$("html").css("-webkit-transform-origin","left top");
+		$("html").css("-webkit-transform","left top");
+		$("html").css("transform-origin","left top");
+		$("html").css("-ms-zoom","0."+intfw);
+		$("html").css("-webkit-zoom","0."+intfw);
+	};
+	rezicePage();
+	$( window ).resize(function() {
+		rezicePage();
+	});
 });
 </script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
