--- a/correccion/index.html
+++ b/correccion/index.html
@@ -6,7 +6,6 @@
 <title>index</title>
 <script src="js/jquery.min.js"></script>
 <script>
-
 $( document ).ready(function() {
 function msieversion() {
 		var ww= $(window).width();
@@ -51,25 +50,26 @@ function msieversion() {
 });
 </script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!--Fireworks CS6 Dreamweaver CS6 target.  Created Tue Apr 12 15:57:40 GMT-0500 (SA Pacific Standard Time) 2016-->
+<!--Fireworks CS6 Dreamweaver CS6 target.  Created Mon Apr 18 11:34:52 GMT-0500 (SA Pacific Standard Time) 2016-->
 </head>
 <body bgcolor="#ffffff">
-<img name="index" src="index.jpg" width="1920" height="2430" id="index" usemap="#m_index" alt="" /><map name="m_index" id="m_index">
-<area shape="rect" coords="1339,1096,1573,1351" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86626" target="_self" title="papas" alt="papas" />
-<area shape="rect" coords="1091,1096,1325,1351" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86625" target="_self" title="profes" alt="profes" />
-<area shape="rect" coords="840,1096,1077,1351" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86624" target="_self" title="charla" alt="charla" />
-<area shape="rect" coords="594,1096,828,1351" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86623" target="_self" title="dia a dia" alt="dia a dia" />
-<area shape="rect" coords="345,1096,579,1351" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86622" target="_self" title="preguntas" alt="preguntas" />
-<!--<area shape="rect" coords="355,872,820,1011" href="javascript:;" alt="" />-->
-<area shape="rect" coords="355,718,820,858" href="http://aprende.colombiaaprende.edu.co/estudiantes2016" target="_self" title="colombiaprende" alt="colombiaprende" />
-<area shape="rect" coords="1257,532,1579,618" href="minimos.html" target="_self" title="minimo" alt="minimo" />
-<area shape="rect" coords="946,532,1257,618" href="matricula.html" target="_self" title="matricula" alt="matricula" />
-<area shape="rect" coords="634,532,946,618" href="requisitos.html" target="_self" title="requisitos" alt="requisitos" />
-<area shape="rect" coords="321,532,634,618" href="quees.html" target="_self" title="que es" alt="que es" />
-<area shape="rect" coords="1331,64,1579,95" href="http://snies.mineducacion.gov.co/buscandocarrerav2/buscaPrograma?nivel=01" target="_self" title="buscar carrera" alt="buscar carrera" />
-<area shape="rect" coords="1128,64,1331,95" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target="_self" title="ya soy un pilo" alt="ya soy un pilo" />
-<area shape="rect" coords="910,64,1128,95" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86641" target="_self" title="voy a ser un pilo" alt="voy a ser un pilo" />
-<area shape="rect" coords="694,64,910,95" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86638" target="_self" title="ser pilo" alt="ser pilo" />
+<img name="index" src="index.jpg" width="1920" height="2618" id="index" usemap="#m_index" alt="" /><map name="m_index" id="m_index">
+<area shape="rect" coords="1338,1296,1573,1549" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86626" target="_self" title="papas" alt="papas" />
+<area shape="rect" coords="1091,1296,1328,1549" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86625" target="_self" title="profes" alt="profes" />
+<area shape="rect" coords="844,1296,1079,1549" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86624" target="_self" title="charla" alt="charla" />
+<area shape="rect" coords="596,1296,829,1549" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86623" target="_self" title="dia a dia" alt="dia a dia" />
+<area shape="rect" coords="338,1296,578,1549" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86622" target="_self" title="preguntas" alt="preguntas" />
+<area shape="rect" coords="338,1036,737,1153" href="http://www.banrepcultural.org/blaa" target="_self" title="Biblioteca" alt="Biblioteca" />
+<area shape="rect" coords="338,883,737,1003" href="javascript:;" alt="" />
+<area shape="rect" coords="338,740,737,860" href="http://aprende.colombiaaprende.edu.co/estudiantes2016" target="_self" title="colombiaprende" alt="colombiaprende" />
+<area shape="rect" coords="1261,525,1579,618" href="minimos.html" target="_self" title="minimo" alt="minimo" />
+<area shape="rect" coords="950,525,1261,618" href="matricula.html" target="_self" title="matricula" alt="matricula" />
+<area shape="rect" coords="639,525,950,618" href="requisitos.html" target="_self" title="requisitos" alt="requisitos" />
+<area shape="rect" coords="320,525,639,618" href="quees.html" target="_self" title="que es" alt="que es" />
+<area shape="rect" coords="1328,63,1598,95" href="http://snies.mineducacion.gov.co/buscandocarrerav2/buscaPrograma?nivel=01" target="_self" title="buscar carrera" alt="buscar carrera" />
+<area shape="rect" coords="1126,63,1328,95" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86642" target="_self" title="ya soy un pilo" alt="ya soy un pilo" />
+<area shape="rect" coords="910,63,1126,95" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86641" target="_self" title="voy a ser un pilo" alt="voy a ser un pilo" />
+<area shape="rect" coords="694,63,910,95" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86638" target="_self" title="ser pilo" alt="ser pilo" />
 </map>
 </body>
 </html>
