--- a/correccion/opcion2/index.html
+++ b/correccion/opcion2/index.html
@@ -59,7 +59,7 @@ function msieversion() {
 <area shape="rect" coords="844,1296,1079,1549" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86624" target="_self" title="charla" alt="charla" />
 <area shape="rect" coords="596,1296,829,1549" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86623" target="_self" title="dia a dia" alt="dia a dia" />
 <area shape="rect" coords="338,1296,578,1549" href="http://aprende.colombiaaprende.edu.co/es/serpilopaga/86622" target="_self" title="preguntas" alt="preguntas" />
-<area shape="rect" coords="338,1036,737,1153" href="http://www.banrepcultural.org/blaa" target="_self" title="Biblioteca" alt="Biblioteca" />
+<area shape="rect" coords="338,1036,737,1153" href="http://52.37.84.217/piloteca/frontend/web/" target="_self" title="Biblioteca" alt="Biblioteca" />
 <area shape="rect" coords="338,883,737,1003" href="javascript:;" alt="" />
 <area shape="rect" coords="338,740,737,860" href="http://aprende.colombiaaprende.edu.co/estudiantes2016" target="_self" title="colombiaprende" alt="colombiaprende" />
 <area shape="rect" coords="1261,525,1579,618" href="minimos.html" target="_self" title="minimo" alt="minimo" />
